// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeniorModeToggle renders in OFF state snapshot 1`] = `
<View
  accessibilityHint="Increases text size, button size, and contrast for easier reading"
  accessibilityLabel="Senior Mode"
  accessibilityRole="switch"
  accessibilityState={
    {
      "busy": undefined,
      "checked": false,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#F7F7F8",
      "borderColor": "rgba(0,0,0,0.12)",
      "borderRadius": 20,
      "borderWidth": 1,
      "marginBottom": 12,
      "opacity": 1,
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "marginRight": 16,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "marginBottom": 4,
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 20,
            }
          }
        >
          👁️
        </Text>
        <Text
          style={
            {
              "color": "#000000",
              "fontSize": 16,
              "fontWeight": "700",
            }
          }
        >
          Senior Mode
        </Text>
      </View>
      <Text
        style={
          {
            "color": "rgba(0,0,0,0.70)",
            "fontSize": 14,
            "lineHeight": 22.400000000000002,
          }
        }
      >
        Increase text size and button targets for easier use
      </Text>
    </View>
    <RCTSwitch
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#821A52"
      style={
        [
          {
            "height": 31,
            "width": 51,
          },
          {
            "backgroundColor": "rgba(255,255,255,0.15)",
            "borderRadius": 16,
          },
        ]
      }
      thumbTintColor="#FFFFFF"
      tintColor="rgba(255,255,255,0.15)"
      value={false}
    />
  </View>
</View>
`;

exports[`SeniorModeToggle renders in ON state snapshot (shows ON badge) 1`] = `
<View
  accessibilityHint="Increases text size, button size, and contrast for easier reading"
  accessibilityLabel="Senior Mode"
  accessibilityRole="switch"
  accessibilityState={
    {
      "busy": undefined,
      "checked": true,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "rgba(130,26,82,0.15)",
      "borderColor": "rgba(130,26,82,0.4)",
      "borderRadius": 20,
      "borderWidth": 1,
      "marginBottom": 12,
      "opacity": 1,
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "marginRight": 16,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "marginBottom": 4,
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 20,
            }
          }
        >
          👁️
        </Text>
        <Text
          style={
            {
              "color": "#000000",
              "fontSize": 16,
              "fontWeight": "700",
            }
          }
        >
          Senior Mode
        </Text>
        <View
          style={
            {
              "backgroundColor": "#821A52",
              "borderRadius": 8,
              "paddingHorizontal": 8,
              "paddingVertical": 2,
            }
          }
        >
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontSize": 11,
                "fontWeight": "700",
                "letterSpacing": 0.5,
              }
            }
          >
            ON
          </Text>
        </View>
      </View>
      <Text
        style={
          {
            "color": "rgba(0,0,0,0.70)",
            "fontSize": 14,
            "lineHeight": 22.400000000000002,
          }
        }
      >
        Large text, bigger buttons, higher contrast active
      </Text>
    </View>
    <RCTSwitch
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#821A52"
      style={
        [
          {
            "height": 31,
            "width": 51,
          },
          {
            "backgroundColor": "rgba(255,255,255,0.15)",
            "borderRadius": 16,
          },
        ]
      }
      thumbTintColor="#FFFFFF"
      tintColor="rgba(255,255,255,0.15)"
      value={true}
    />
  </View>
</View>
`;
